@@ -15,7 +15,7 @@ Nyt on joten kuten  tehtävä joten kuten hankalampi   virheyhdistelmä.
  [code=1, level=0, descr="", stpos=28, len=11, suggs={"jotenkuten"}]
  [code=2, level=0, descr="", stpos=50, len=3, suggs={" "}]
 Lause , jossa on pilkun edellä turha väli.
- [code=3, level=0, descr="", stpos=5, len=2, suggs={}]
+ [code=3, level=0, descr="", stpos=5, len=2, suggs={","}]
 Lause,, jossa kaksi peräkkäistä pilkkua.
  [code=4, level=0, descr="", stpos=5, len=2, suggs={}]
 Aurinko paistaa. (Tämä virke on suluissa.)
